--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource-variable/noto-sans-jp": "^5.2.5",
     "@mui/material": "^6.4.7",
     "prettier": "^3.5.2",
     "react": "^19.0.0",
