--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource-variable/noto-sans-jp": "^5.2.5",
+    "@handsontable/react-wrapper": "^15.1.0",
     "@mui/material": "^6.4.7",
+    "handsontable": "^15.1.0",
     "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
