--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fontsource-variable/noto-sans-jp": "^5.2.5",
     "@handsontable/react-wrapper": "^15.1.0",
     "@mui/material": "^6.4.7",
+    "ag-grid-community": "^33.1.1",
+    "ag-grid-react": "^33.1.1",
     "handsontable": "^15.1.0",
     "hyperformula": "^3.0.0",
     "prettier": "^3.5.2",
