--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource-variable/noto-sans-jp": "^5.2.5",
     "@handsontable/react-wrapper": "^15.1.0",
     "@mui/material": "^5.16.14",
+    "@mui/x-data-grid-pro": "5",
     "ag-grid-community": "^33.1.1",
     "ag-grid-react": "^33.1.1",
     "handsontable": "^15.1.0",
